# orbitize

./: .gitignore  .readthedocs.yaml  .travis.yml  CNAME  HDF5_Test.py  HDF5_shortpos.py  LICENSE  MANIFEST.in  OFTI_tutorial.ipynb  Profile.prof  README.md  code_practices.md  contributor_guidelines.md  contributors.txt  dynesty_tutorial.ipynb  mcmc_test.py  nested_test.py  prior_test.py  pyproject.toml  read_input.py  readthedocs.yml  requirements.txt  results.py  sampler.py  setup.py  system.py  test_new_plot.py
docs/: Makefile  api.rst  basis.rst  conf.py  contributing.rst  conversions.rst  driver.rst  faq.rst  formatting_inputs.rst  gaia.rst  hipparcos.rst  index.rst  installation.rst  kepler.rst  lnlike.rst  make.bat  manual.rst  mcmc.rst  nbody.rst  plot.rst  priors.rst  read_input.rst  readthedocs-environment.yml  requirements.txt  results.rst  sampler.rst  system.rst  tutorials.rst
example_beta_pic/: betapic_astrometry.csv  end_to_end_MCMC_example.py
orbitize/: .nfs000000000002d123000068ec  .nfs000000000004befd000046fe  Initial_Positions_nocustomlikelihood_HD159062.ipynb  MCMC_datatest_runs.ipynb  MCMC_simuldata_overplots_4poster.ipynb  MCMC_testdata_runs.ipynb  OFTI_orbits_fitted2MCMC_4poster.ipynb  OFTI_simuldata_MCMC_fit_noloop.ipynb  OFTI_testdata_runs.ipynb  __init__.py  _kepler.cc  _kepler.hh  _kepler.pyx  basis.py  comparison_plotting.py  contributors.txt  conversions.py  custom_hd159062_lnlike.py  custom_lnlike_test.py  driver.py  driver_sampler_test.ipynb  driver_test.py  gaia.py  gpu_context.py  gsc6214_astrometry.csv  hipparcos.py  kepler.c  kepler.cc  (+19 more)
(+265 files in other folders)
